# file_extractor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  index.html  makefile  pyproject.toml
docker/app/: Dockerfile  entrypoint.sh
docker/spark/: Dockerfile
migrations/: 20230912_01_SUBzL.py  20231205_01_irBcy.py
quarto/: computations.ipynb  computations.qmd
src/: wait_spark.py
src/common/: pgsql.py  settings.py  worker.py
src/domain/file_data/: container.py  file_extraction.py  file_processor.py
src/domain/file_data/command/: extract.py  sync.py
src/domain/file_data/exception/: pe_file.py
src/domain/file_data/handler/: pe_file.py
src/domain/file_data/model/: file_sync_info.py  pe_file_data.py
src/domain/file_data/repository/: interface.py
src/domain/file_data/repository/mapper/: storage_service.py
src/domain/file_data/service/: file_storage_service.py
src/presistence/: container.py
src/presistence/repository/: file.py
src/presistence/repository/mapper/: file.py
src/presistence/repository/mapper/fields/: file.py
src/presistence/service/: s3.py
src/worker_extract/: container.py  main.py  settings.py
src/worker_sync/: container.py  main.py  settings.py
tests/: test_file_processor.py
tests/domain/file_data/command/: test_extract.py
tests/domain/file_data/handler/: test_pe_file.py
